make entity and controller for the employee

--- a/employee-management/src/main/resources/application.properties
+++ b/employee-management/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# ??? ??????? ???????
 spring.application.name=Employee Management System
+server.port=2020
+
+# ??????? H2 database
+spring.datasource.url=jdbc:h2:mem:mydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+# ????? h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
