--- a/employee-management/src/main/resources/application.properties
+++ b/employee-management/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=123
 
 # JPA
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
